handle issue on mobile view at course details pages

--- a/src/components/courseDetails/why/why.module.css
+++ b/src/components/courseDetails/why/why.module.css
@@ -15,12 +15,11 @@
   height: 2px;
   background-color: var(--darkGreen);
 }
-.text {
-  font-size: 24px;
-  width: 75%;
+.whyTitle {
+  font-size: 18px;
 }
-@media screen and (max-width: 767px) {
-  .text {
-    width: 100%;
+@media screen and (max-width : 767px) {
+  .whyTitle {
+    font-size: 13px;
   }
 }
